# stellcoilbench

./: .gitattributes  .gitignore  .lfsconfig  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  environment-parastell.yml  pyproject.toml
cases/: LandremanPaulQA_structural_FC_vtk_animation.yaml  LandremanPaulQA_structural_optimization.yaml  advanced_LandremanPaulQA.yaml  basic_CFQS.yaml  basic_HSX.yaml  basic_LandremanPaulQA.yaml  basic_LandremanPaulQH.yaml  basic_MUSE.yaml  basic_NCSX.yaml  basic_SchuettHennebergQA_nfp2.yaml  basic_W7X.yaml  basic_rotating_ellipse.yaml  basic_tokamak.yaml  expert_LandremanPaulQA.yaml  expert_W7X.yaml
data_twin/: __init__.py
docs/: PRE_MIGRATION_CHECKLIST.md  api.rst  autopilot.rst  cases.rst  conf.py  data_twin_design.md  data_twin_workflow.md  forking.md  index.rst  leaderboard.rst  line_counts_py.md  llm_context_audit_log.md  llm_context_math_physics_audit_plan.md  llm_figure_standalone.tex  llm_policy_context_latex.tex  overview.rst
knowledge/: README.md  llm_client.py  llm_context.md  llm_context_full.md  llm_endpoints.py  make_postmortem.py  make_run_card.py  papers_manifest.jsonl  surface_catalog.json
policy/: llm_reasoning_history.json  proposer_policy.yaml  wout0706_stage0_gate_n4n5_lenvar_policy.yaml  wout20260324_round1_policy.yaml
reports/: repo_handoff_audit_20260708.md
scripts/: data_twin_cli.py  launch_round1_eval000030_n4o8_res128_q256_stage2_geom.sh  optimization_workflow.py  run_round1_wout20260324.py  run_simsopt_batch.py  workflow_ingest_results.py  workflow_launch.py  workflow_reconcile.py  workflow_screen_results.py
structural_correlation_output/: structural_correlation.json
tests/: __init__.py  assert_helpers.py  conftest.py  test_artifacts.py  test_assert_helpers.py  test_case_only_pr.py  test_ci_filter_cases.py  test_coil_optimization.py  test_config_scheme.py  test_constants.py  test_data_twin_sqlite_index.py  test_evaluate.py  test_finite_build.py  test_finite_build_width_passthrough.py  test_ingest.py  test_lineage.py  test_models.py  test_mpi_functionality.py  test_optional_imports.py  test_paper_pipeline.py  test_path_utils.py  test_query.py  test_reactor_scale.py  test_reports.py  test_sensitivity.py  test_storage.py  test_structural_objective.py  test_utils.py
tools/: __init__.py  assemble_llm_context.py  build_context.py  ci_autopilot_batch.sh  ci_autopilot_runner.py  ci_case_only_validate.py  ci_commit_autopilot_results.sh  ci_commit_leaderboard.sh  (+27 more)
(+116513 files in other folders)
